# lexnorm

./: .gitattributes  .gitignore  LICENSE.md  Makefile  README.md  definitions.py  log.txt  pyproject.toml  requirements.txt  setup.cfg  structure.txt
.github/workflows/: python-app.yml
data/cpp/: load_ngrams  loadfrombin.cc
data/interim/: american-70.txt  candidates.txt  lexicon.txt  lexicon_new.txt  train.txt
data/test/: british-35.txt
hpc/: candidates.txt
models/: adaboost.joblib  output.txt  output_0.txt  output_1.txt  output_2.txt  output_3.txt  output_4.txt  svm.joblib
models/output/: output_0.txt  output_1.txt  output_2.txt  output_3.txt  output_4.txt
notebooks/: 1.0-data-concatenation.ipynb  1.0-data-exploration.ipynb  2.0-candidate-generation.ipynb  3.0-random-forest.ipynb  4.0-visualisation.ipynb  notebook_loc.py
src/data/: baseline.py  concatenate.python.py  normEval.py
src/lexnorm/: definitions.py
src/lexnorm/data/: analyse.py  baseline.py  concatenate.py  construct_lexicon.py  lexicon.py  make_train.py  normEval.py  norm_dict.py  word2vec.py  word_ngrams.py
src/lexnorm/evaluation/: analyse.py  candidates.py  components.py  condition_normalisation.py  hyperparameters.py  models.py  predictions.py
src/lexnorm/generate_extract/: candidate_generation.py  candidates.py  filtering.py  modules.py  process.py
src/lexnorm/models/: annotation.py  (+10 more)
tests/: test_annotation.py  test_concatenate.py  test_condition_normalisation.py  test_construct_lexicon.py  test_filtering.py  test_lexicon.py  test_make_train.py  test_norm_dict.py  test_process.py
