[metadata]
name = lexnorm
version = 0.0.1
author = Eli Joe
author_email = ej349@cam.ac.uk
description = Lexical normalization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elijoe1/lexnorm

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =

[options.packages.find]
where = src
